Refactor notification system to use typed models and improve origin handling
- Introduced a new `Text` enum and `Notification` struct for better type safety in notifications.
- Replaced string-based notification API with a typed `send_notification_typed` function.
- Updated all notification calls across the application to use the new API.
- Added a centralized `Origin` enum to categorize notification sources and job origins.
- Refactored job-related structures to utilize the new `Origin` type.
- Improved translation handling in notifications, including fallback mechanisms.
- Updated styles in various components for consistency and improved UI.
- Removed deprecated string parsing heuristics in favor of explicit types.

--- a/resources/i18n/en-US/main.json
+++ b/resources/i18n/en-US/main.json
@@ -2554,6 +2554,7 @@
       "moveComplete": "Move Complete",
       "moveFailed": "Move Failed",
       "moveStopped": "Move Stopped",
+      "nothingToDo": "Nothing to do",
       "bisyncStarted": "BiSync Started",
       "bisyncComplete": "BiSync Complete",
       "bisyncFailed": "BiSync Failed",
@@ -2603,6 +2604,9 @@
       "serveStopped": "Stopped serve for {{remote}} ({{profile}})",
       "stopServeFailed": "Failed to stop serve for {{remote}} ({{profile}}): {{error}}",
       "allJobsStopped": "Stopped {{count}} active jobs",
+      "nothingToDoJobs": "No active jobs found - nothing to stop.",
+      "nothingToDoServes": "No active serves found - nothing to stop.",
+      "nothingToDoMounts": "No mounted remotes found - nothing to unmount.",
       "allServesStopped": "All serves stopped",
       "stopAllServesFailed": "Failed to stop serves: {{error}}",
       "complete": "{{operation}} on {{remote}} completed successfully ({{profile}})",
