--- a/resources/i18n/tr-TR/main.json
+++ b/resources/i18n/tr-TR/main.json
@@ -2561,6 +2561,7 @@
       "serveStopped": "Sunucu Durduruldu",
       "stopServeFailed": "Sunucu Durdurulamadı",
       "allJobsStopped": "Tüm İşler Durduruldu",
+      "nothingToDo": "Yapılacak bir şey yok",
       "allServesStopped": "Tüm Sunucular Durduruldu",
       "stopAllServesFailed": "Sunucular Durdurulamadı",
       "operationFailed": "{{operation}} Başarısız",
@@ -2591,6 +2592,9 @@
       "profileNotFound": "'{{profile}}' profili bulunamadı",
       "alreadyRunning": "Uygulamanın başka bir örneği algılandı. Bellek optimizasyonu aktif olduğu için pencere kapatılmıştı. Lütfen tepsiyi kullanarak pencereyi açın.",
       "allRemotesUnmounted": "Tüm uzak bağlantılar başarıyla ayrıldı",
+      "nothingToDoJobs": "Aktif iş bulunamadı - durdurulacak bir şey yok.",
+      "nothingToDoServes": "Aktif sunum bulunamadı - durdurulacak bir şey yok.",
+      "nothingToDoMounts": "Bağlı uzak bağlantı bulunamadı - ayrılacak bir şey yok.",
       "started": "{{remote}} profili '{{profile}}' için {{operation}} başlatıldı",
       "startFailed": "Başarısız: {{error}}",
       "stopped": "{{remote}} profili '{{profile}}' için {{operation}} durduruldu",
