feat: Implement dynamic backend connection settings schema and update related components and services

--- a/resources/i18n/en-US/main.json
+++ b/resources/i18n/en-US/main.json
@@ -234,7 +234,7 @@
       },
       "language": {
         "label": "Language",
-        "description": "Language to use for the user interface."
+        "description": "Language to use for the user interface. System language is used by default."
       },
       "start_on_startup": {
         "label": "Start on Startup",
