--- a/resources/i18n/en-US/main.json
+++ b/resources/i18n/en-US/main.json
@@ -2039,10 +2039,8 @@
       "undoFailed": "Undo failed for {{count}} items",
       "redoFailed": "Redo failed for {{count}} items",
       "rmdirsFailed": "Failed to remove empty folders in \"{{name}}\": {{error}}",
-      "createFolderFailed": "Failed to create folder \"{{name}}\": {{error}}",
-      "emptyTrashFailed": "Failed to empty trash in {{remote}}: {{error}}",
-      "openFileFailed": "Cannot open file: missing remote server context",
-      "minSelection": "Please select at least {{min}} item{{s}}."
+      "openFileFailed": "Dosya açılamıyor: uzak sunucu bağlamı eksik",
+      "minSelection": "Lütfen en az {{min}} öge seçin."
     },
     "contextMenu": {
       "open": "Open",
@@ -2087,7 +2085,7 @@
     },
     "notifications": {
       "undo": "Undo",
-      "trashEmptied": "Cleanup operation completed",
+      "trashEmptied": "Cleanup operation started",
       "locationCopied": "Location copied to clipboard",
       "rmdirsStarted": "Removing empty folders in \"{{name}}\"...",
       "deleteStarted": "Deleting {{count}} items...",
